<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".ui.SubmissionActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary">

            <ImageView
                android:id="@+id/appbar_back_btn"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_arrow_left"
                app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="0dp"
                android:paddingTop="@dimen/standard"
                android:layout_height="70dp"
                android:layout_marginStart="@dimen/standard"
                android:layout_marginEnd="16dp"
                android:src="@drawable/gads_banner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/appbar_back_btn"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/project_sub_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/project_submission"
                android:textColor="@color/colorAccent2"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/gradient_view_bg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/project_sub_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/small"
        android:background="@drawable/edit_text_bg"
        android:ems="10"
        android:hint="@string/first_name_hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingHorizontal="@dimen/small"
        android:paddingVertical="@dimen/small"
        android:theme="@style/MyEditTextTheme"
        app:layout_constraintEnd_toStartOf="@+id/editTextLastName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar" />

    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small"
        android:layout_marginEnd="@dimen/standard"
        android:background="@drawable/edit_text_bg"
        android:ems="10"
        android:hint="@string/last_name_hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingHorizontal="@dimen/small"
        android:paddingVertical="@dimen/small"
        android:theme="@style/MyEditTextTheme"
        app:layout_constraintBottom_toBottomOf="@+id/editTextFirstName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editTextFirstName"
        app:layout_constraintTop_toTopOf="@+id/editTextFirstName" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/xlarge"
        android:background="@drawable/edit_text_bg"
        android:ems="10"
        android:hint="@string/email_hint"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="@dimen/small"
        android:paddingVertical="@dimen/small"
        android:theme="@style/MyEditTextTheme"
        app:layout_constraintEnd_toEndOf="@+id/editTextLastName"
        app:layout_constraintStart_toStartOf="@+id/editTextFirstName"
        app:layout_constraintTop_toBottomOf="@+id/editTextFirstName" />

    <EditText
        android:id="@+id/editTextGitUrl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/xlarge"
        android:background="@drawable/edit_text_bg"
        android:ems="10"
        android:hint="@string/gitUrl_hint"
        android:importantForAutofill="no"
        android:inputType="textUri"
        android:paddingHorizontal="@dimen/small"
        android:paddingVertical="@dimen/small"
        android:theme="@style/MyEditTextTheme"
        app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
        app:layout_constraintStart_toStartOf="@+id/editTextEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <Button
        android:id="@+id/submit_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/xlarge"
        android:background="@drawable/btn_bg_two"
        android:paddingHorizontal="@dimen/large"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/editTextGitUrl"
        app:layout_constraintStart_toStartOf="@+id/editTextGitUrl"
        app:layout_constraintTop_toBottomOf="@+id/editTextGitUrl" />

</androidx.constraintlayout.widget.ConstraintLayout>